# ESP32-IOT-EMI-EMC

./: README.md  sbom.txt  sdkconfig  wifi_handler.c
components/sd_card/: .cproject  .project
main/: AT_Command.h  CMakeLists.txt  Kconfig.projbuild  cmd_i2ctools.c  cmd_i2ctools.h  eth.c  eth.h  i2c_tools.c  i2c_tools.h  idf_component.yml  main.c  main.h  meter_emi_emc.h  modbus.c  ring_buffer.c  ring_buffer.h  sd_card.h  sd_card_example_main.c  wifi.c  wifi.h
